@@ -1,5 +1,13 @@
 2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* DebuggerServer.cs:
+	* BacktraceWrapper.cs:
+	* EvaluationContext.cs:
+	* MdbObjectValueAdaptor.cs: Improve implementation of
+	  catchpoints. Properly report the catchpoint exception.
+
+2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* DebuggerServer.cs: Track api changes.
 
 2010-02-22  Mike Krüger  <mkrueger@novell.com>
